# vn-gold-market-analysis

./: .env.example  .gitignore  CLAUDE.md  README.md  add_fx_source.py  audit_enriched.py  audit_fx.py  audit_fx_source.py  audit_premium.py  fix_gold_type.py  fix_indent.py  fix_lbma.py  fix_premium_buy_sell.py  pyproject.toml  requirements.txt  run_all_pipelines.bat  test_connectivity.py  test_crawl4ai.py  test_crawl4ai_sjc.py  test_crawl4ai_v2.py  test_crawl4ai_vcb.py  test_fred.py  test_fred_key.py  tmp_check_pnj.py  tmp_final_fix.py  tmp_final_fix_v2.py  tmp_sidebar_fix.py  v2_fallback_collector.py
.claude/commands/: build-log-entry.md
.firecrawl/: fetch_paper.py  fetch_s2.py  jina_full.txt  ss_papers.json  ss_results.json
.github/build-logs/: progressiov1-build-log.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
configs/: source_registry_audited.csv  source_registry_audited.yaml
data/: README.md
data/lake/: deposit_rates_vn.csv  etf_proxy_gld.csv  event_regime_panel.csv  futures_basis_gc_f.csv  fx_rates_vietcombank_sbv.csv  gld_shares_outstanding.csv  global_reference_daily.csv  gold_event_panel.csv  gpr_daily_geopolitical_risk.csv  gpr_monthly_geopolitical_risk.csv  lbma_gold_proxy_gc_f.csv  lbma_gold_spot_am_pm.csv  news_events.csv  pipeline_output_event_regime.csv  pipeline_output_global_reference.csv  pipeline_output_premium_enriched.csv  vn_macro_sbv_gso.csv  vn_market_series_vnstock.csv
docs/: DATA_DICTIONARY.md  DATA_INVENTORY_REPORT.md  PIPELINE_GUIDE.md  SOURCE_CODE_MAP.md  _doc_stats.json  deep-research-report.md  literature_review.md  modeling.md
docs/reports/: current_crawlable_sources.md  eda_modeling_literature_review.md  eda_modeling_report.md  full_data_quality_audit.md  model_card.md  source_coverage_audit_2010_2026.md  vn_gold_analysis_full_report.docx
notebooks/: 01_eda_and_modeling_decision_support.ipynb
scripts/analysis/: audit_full_data_quality.py  eda_report.py  (+5 more)
test_outputs/: deliverables_report.json  deliverables_report.md  deliverables_report.txt
tests/: test_collectors.py  test_full_pipeline.py  test_modeling_decision_support.py  test_reliability.py
(+142 files in other folders)
